sua lai toan bo file va them moi trip list